[project]
name = "chargax"
version = "0.3.5"
description = "A JAX Accelerated EV Charging Simulator"
readme = "README.md"
authors = [
    { name = "Koen Ponse", email = "k.ponse@liacs.leidenuniv.nl" }
]
requires-python = ">=3.13"
dependencies = [
    "jax-datetime>=0.1.0",
    'jaxnasium[algs]>=0.0.29',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F722", "E731"]

[tool.ruff.lint.isort]
combine-as-imports = true
